v. 1.0.7 - in progress
 - added GetTableNames() script to scripts.php - return an array of human-friendly names, keyed to mysql table_name
 - fixed bug in settings.php: can now turn off columns in print view (could previously only turn them ON)
 - show human-friendly names in settings.php
 - fixed bug so print settings take effect in print.php

v. 1.0.6 - 06 October 2012
 - added backticks to a mysql table call in ajaxcrud.class.php 
 - allowed for user to enter non-allowed characters in upload.php table name (non allowed characters will convert to underscores)

v. 1.0.5 - 29 October 2012
 - change line 180 in prep_file.php to .= instead of = ; this allows for multiple items with the same call number; previous versions disappeared subsequent items with duplicate call numbers
 - update innreach_check.php: call DOM parser with $path_main instead of ./ in the path -- works more reliably in some environments 
 - updated upload.php to fail verbosely when file is empty
 - changed innreach_check.php so that the oldest file is checked first against the InnReach catalog
 - updated config-sample.php to include $innreach[local_display_name] variable
 - updated innreach_check.php to use $innreach[local_display_name] variable
 - added $html->clear() to help manage memory issue on the dom parser in innreach_check.php
 - changed innreach_check.php to enter a value of -1 if innreach check cannot return a value. this should keep the process from stalling out. (this appears not to be working right yet)
 - added unstick.php to get the innreach checks unstuck when they hit a page they can't parse. added a call to this functionality from controller.php
 - updated view.php: show table title  

v. 1.0.4
 - added DeleteTable function to controller.php (deletes main data table, plus the associated text files on the server and the related line from the controller mysql table)
 - added delete.png to to the images/ folder
 - added changelog

v. 1.0.3