@@ -1,3 +1,3 @@
 <?
-$version = "1.0.6";
+$version = "1.0.7";
 ?>
